--- a/iaff_front/src/pages/Map/neighborhood_discovery.html
+++ b/iaff_front/src/pages/Map/neighborhood_discovery.html
@@ -13,7 +13,7 @@
     <script>
       const CONFIGURATION = {
         "capabilities": {"search":true,"distances":false,"directions":false,"contacts":false,"atmospheres":false,"thumbnails":false},
-        "pois": [
+        /*"pois": [
           {"placeId": "ChIJTeWAPIzMHkcRXOfYhMkscBI"},
           {"placeId": "ChIJSS5pkozMHkcRwi0fMeV66cI"},
           {"placeId": "ChIJ0cxQolvMHkcRYAlBuLnx1gg"},
@@ -51,7 +51,7 @@
           {"placeId": "ChIJQydDxGPMHkcR78Da8tbzYm4"},
           {"placeId": "ChIJd6DMsIfMHkcRXC5OjK1d-l8"},
           {"placeId": "ChIJlcAIuPHMHkcRINwR4lH5EI0"}
-        ],
+        ],*/
         "mapRadius": 6000,
         "mapOptions": {"center":{"lat":52.2296756,"lng":21.0122287},"fullscreenControl":true,"mapTypeControl":true,"streetViewControl":false,"zoom":16,"zoomControl":true,"maxZoom":20,"mapId":""},
         "mapsApiKey": "AIzaSyC1ktpwTsLjkF1x3qR94HPcH3JCRFIYQdg"
@@ -114,53 +114,73 @@
     </script>
   </head>
   <body>
-    <div class="neighborhood-discovery">
+    <div class="searchBox">
       <input type="text" id="cityInput" placeholder="Enter a city">
-      <button onclick="updateMapCenter()">Search</button>
+      <button id="updateMapBtn">Search</button>
+    </div>
+    <div class="columns">
       <div class="poi-checkboxes">
-        <label class="poi-checkbox">
-          <input type="checkbox" value="Restaurants & cafes"> Restaurants & cafes
-        </label>
-        <label class="poi-checkbox">
-          <input type="checkbox" value="Arts & entertainments"> Arts & entertainments
-        </label>
-        <label class="poi-checkbox">
-          <input type="checkbox" value="Schools"> Schools
-        </label>
-        <label class="poi-checkbox">
-          <input type="checkbox" value="Groceries"> Groceries
-        </label>
-        <label class="poi-checkbox">
-          <input type="checkbox" value="Shopping"> Shopping
-        </label>
-        <label class="poi-checkbox">
-          <input type="checkbox" value="Parks & gyms"> Parks & gyms
-        </label>
-        <label class="poi-checkbox">
-          <input type="checkbox" value="Nightlife"> Nightlife
-        </label>
-        <label class="poi-checkbox">
-          <input type="checkbox" value="ATMs & banks"> ATMs and banks
-        </label>
-        <label class="poi-checkbox">
-          <input type="checkbox" value="Tourist attractions"> Tourist attractions
-        </label>
-        <label class="poi-checkbox">
-          <input type="checkbox" value="Laundromat"> Laundromat
-        </label>
-        <label class="poi-checkbox">
-          <input type="checkbox" value="Post office"> Post office
-        </label>
-        <label class="poi-checkbox">
-          <input type="checkbox" value="Library"> Library
-        </label>
-        <label class="poi-checkbox">
-          <input type="checkbox" value="Hospitals & pharmacies"> Hospitals & pharmacies
-        </label>
-        <label class="poi-checkbox">
-          <input type="checkbox" value="Police & fire stations"> Police & fire stations
-        </label>
+      <!-- First column -->
+        <div class="column">
+          <label class="poi-checkbox">
+            <input type="checkbox" value="Restaurants & cafes"> Restaurants & cafes
+          </label>
+          <label class="poi-checkbox">
+            <input type="checkbox" value="Arts & entertainments"> Arts & entertainments
+          </label>
+        </div>
+        <div class="column">
+          <label class="poi-checkbox">
+            <input type="checkbox" value="Schools"> Schools
+          </label>
+          <label class="poi-checkbox">
+            <input type="checkbox" value="Groceries"> Groceries
+          </label>
+        </div>
+        <div class="column">
+          <label class="poi-checkbox">
+            <input type="checkbox" value="Shopping"> Shopping
+          </label>
+          <label class="poi-checkbox">
+            <input type="checkbox" value="Parks & gyms"> Parks & gyms
+          </label>
+        </div>
+        <div class="column">
+          <label class="poi-checkbox">
+            <input type="checkbox" value="Nightlife"> Nightlife
+          </label>
+          <label class="poi-checkbox">
+            <input type="checkbox" value="ATMs & banks"> ATMs and banks
+          </label>
+        </div>
+        <div class="column">
+          <label class="poi-checkbox">
+            <input type="checkbox" value="Tourist attractions"> Tourist attractions
+          </label>
+          <label class="poi-checkbox">
+            <input type="checkbox" value="Laundromat"> Laundromat
+          </label>
+        </div>
+        <div class="column">
+          <label class="poi-checkbox">
+            <input type="checkbox" value="Post office"> Post office
+          </label>
+          <label class="poi-checkbox">
+            <input type="checkbox" value="Library"> Library
+          </label>
+        </div>
+        <div class="column">
+          <label class="poi-checkbox">
+            <input type="checkbox" value="Hospitals & pharmacies"> Hospitals & pharmacies
+          </label>
+          <label class="poi-checkbox">
+            <input type="checkbox" value="Police & fire stations"> Police & fire stations
+          </label>
+        </div>
+        <button id="updatePOIBtn">Filters</button>
       </div>
+    </div>
+    <div class="neighborhood-discovery">
       <div class="places-panel panel no-scroll">
         <div class="results">
           <ul class="place-results-list"></ul>
