--- a/iaff_front/public/index.html
+++ b/iaff_front/public/index.html
@@ -15,6 +15,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC1ktpwTsLjkF1x3qR94HPcH3JCRFIYQdg"></script>
     <div id="root"></div>
   </body>
 </html>
